--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -541,7 +541,7 @@ function get_keywords(request, response){
                 ,maxNativeZoom:16
             }),
             poverty = L.tileLayer('<%= Configuration.tile_server %>/nightlights/{z}/{x}/{y}.png', {
-                attribution: "Base layer data from <a href='http://ngdc.noaa.gov/eog/dmsp/download_nldi.html'>NOAA's NLDI</a>",
+                attribution: "Base layer data from <a href='http://ngdc.noaa.gov/eog/dmsp/download_gdp.html'>NOAA</a>",
                 noWrap:true,
                 opacity:0.7,
                 zIndex:4
